@@ -1,3 +1,14 @@
+2013-03-12  Adam Barth  <abarth@webkit.org>
+
+        [Chromium] Remove last vestigates of WEBKIT_USING_V8
+        https://bugs.webkit.org/show_bug.cgi?id=112203
+
+        Reviewed by James Robinson.
+
+        These macros are no longer referenced anywhere and can be removed.
+
+        * chromium/public/WebCommon.h:
+
 2013-03-12  James Robinson  <jamesr@chromium.org>
 
         [chromium] Remove unused WebIOSurfaceLayer type
